--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@headlessui/react": "^1.6.4",
     "lottie-react": "^2.2.1",
     "react": "^18.0.0",
@@ -16,6 +21,7 @@
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
+    "@types/node": "^17.0.40",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-scroll": "^1.8.3",
